@startuml ATMUygulamasi

class ScreenDisplay {
    +DisplayStartUpScreen(): void
}

class Customer {
    -FirstName: string
    -LastName: string
    -NationalIDNumber: string
    -PhoneNumber: string
    -DateOfBirth: string = "1970-01-01"

    +Customer(firstName: string, lastName: string, NationalIDNumber: string, PhoneNumber: string): void
    +FullName(firstName: string, lastName: string): string
}

class ExternalCustomer {
    -ExternalCustomerID: string
    -ExternalBankName: string
    -ExternalAccountID: string

    +ExternalCustomer(firstName: string, lastName: string, NationalIDNumber: string,
    PhoneNumber: string, externalCustomerID: string, externalBankName: string, ExternalAccountID: string): void
}

class InternalCustomer {
    -InternalCustomerID: string
    -Balance: decimal = 0
    -CardPIN: string = "0000"
    -CardNumber: string = "0000000000000000"
    -CardExpiryDate: string = "2034-01-01"
    -CardStatus: string = "Passive"

    +InternalCustomer(firstName: string, lastName: string, NationalIDNumber: string,
    PhoneNumber: string, internalCustomerID: string): void
    +SetBalance(balance: decimal, [isWithdraw: boolean]): void
}

class OptionHandler {
    +GetMainScreenInput(externalCustomerHandler: ICustomerHandler, internalCustomerHandler: ICustomerHandler,
    exitATMHandler: ExitATMHandler, screenDisplay: ScreenDisplay): void
}

interface ICustomerHandler {
    +DisplayCustomerScreen(exitATMHandler: ExitATMHandler): void
}

class ExternalCustomerHandler {
    +DisplayCustomerScreen(exitATMHandler: ExitATMHandler): void
}

class InternalCustomerHandler {
    +DisplayCustomerScreen(exitATMHandler: ExitATMHandler): void

    -DisplayLoginScreen(): void
    -DisplayLoggedInCustomerScreen(internalCustomer: InternalCustomer): void
    -GetLoggedInCustomerInput(exitATMHandler: ExitATMHandler, internalCustomer: InternalCustomer): void
    -GetCustomerInput(exitATMHandler: ExitATMHandler): void
    -LoginWithCardNumber(exitATMHandler: ExitATMHandler, customerRepository: CustomerRepository): void
    -AuthenticateCustomer(customerRepository: CustomerRepository, cardDetailsToCheck: List<string>): InternalCustomer?
    -WithdrawMoney(internalCustomer: InternalCustomer): void
    -DepositMoney(internalCustomer: InternalCustomer): void
    -ViewBalance(internalCustomer: InternalCustomer): void
    -TransferMoney(internalCustomer: InternalCustomer, customerRepository: CustomerRepository): void
    -DoTransaction(sender: InternalCustomer, recipient: InternalCustomer, amount: decimal): void
}

class CustomerRepository {
    - _instance: CustomerRepository? = null
    + Instance: CustomerRepository
    + customers: List<Customer>
    + Customers: List<Customer>

    - CustomerRepository()
}

class ExitATMHandler {
    +ExitATM(): void
}

Customer <|-- ExternalCustomer
Customer <|-- InternalCustomer

ICustomerHandler <|-- ExternalCustomerHandler
ICustomerHandler <|-- InternalCustomerHandler

OptionHandler ..> ICustomerHandler
OptionHandler ..> ScreenDisplay

ICustomerHandler ..> ExitATMHandler
ExternalCustomerHandler ..> ExitATMHandler
InternalCustomerHandler ..> ExitATMHandler
OptionHandler ..> ExitATMHandler

InternalCustomerHandler ..> CustomerRepository
InternalCustomerHandler ..> InternalCustomer

@enduml